# QuadSLAM

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  debug.sh  main.cpp
cmake/: FindSQLite3.cmake
examples/: camera.cpp  cinder_and_opencv.cpp  cinder_pointcloud.cpp  db_read.cpp  gps.cpp  imu.cpp  triangle.cpp
examples/cinder/: pointcloud.cpp  pointcloud2.cpp  preview.cpp  virtual_tracking.cpp
examples/cli/: camera.cpp  db_read.cpp  gps.cpp  imu.cpp
include/: quad_loader.h  quadslam.h  types.h  utils.h
include/loader/: camera_loader.h  gps_loader.h  imu_loader.h  quad_loader.h
src/: quad_loader.cpp  types.cpp
src/loader/: camera_loader.cpp  gps_loader.cpp  imu_loader.cpp  quad_loader.cpp
